RESOLVED FIXED41004
InspectorCSSStore.cpp is not surrounded with ENABLE(INSPECTOR)
https://bugs.webkit.org/show_bug.cgi?id=41004
Summary InspectorCSSStore.cpp is not surrounded with ENABLE(INSPECTOR)
Lyon Chen
Reported 2010-06-22 11:53:24 PDT
InspectorCSSStore.cpp is not surrounded with ENABLE(INSPECTOR), thus fail build if INSPECTOR is disabled.
Attachments
patch (1.14 KB, patch)
2010-06-22 12:05 PDT, Lyon Chen
no flags
Lyon Chen
Comment 1 2010-06-22 12:05:08 PDT
WebKit Commit Bot
Comment 2 2010-06-25 08:29:51 PDT
Comment on attachment 59401 [details] patch Clearing flags on attachment: 59401 Committed r61864: <http://trac.webkit.org/changeset/61864>
WebKit Commit Bot
Comment 3 2010-06-25 08:29:55 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.