2010-06-25  Lyon Chen  <liachen@rim.com>

Reviewed by Darin Adler.

        InspectorCSSStore.cpp is not surrounded with ENABLE(INSPECTOR)
        https://bugs.webkit.org/show_bug.cgi?id=41004

        Surround InspectorCSSStore.cpp code with ENABLE(INSPECTOR) so it will not
        break the build when INSPECTOR is disabled.

        * inspector/InspectorCSSStore.cpp:

Canonical link: https://commits.webkit.org/52864@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@61864 268f45cc-cd09-0410-ab3c-d52691b4dbfc